# docs/swagger.json
@@ -684,12 +684,6 @@
                 "auctioneer": {
                     "$ref": "#/definitions/models.ShortUserData"
                 },
-                "bids": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Bid"
-                    }
-                },
                 "bids_count": {
                     "type": "integer"
                 },
